Fixed language change button on mobile and Ipads

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -411,7 +411,7 @@ body {
 }
 
 /*style change language button for tablet and mobile*/
-.changeLanguage-pad {
+.change-language-pad {
   width: 5rem;
   float: left;
   padding: 0.5em 1em;
